<resources>
    <string name="app_name">Practica 2</string>
    <string name="titulo">Registro de cuenta</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo electrónico:</string>
    <string name="contrasena">Contraseña: Mínimo 6 dígtos</string>
    <string name="contrasenax2">Repetir Contraseña:</string>
    <string name="telefono">Teléfono:</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="hobbies">Seleccione sus Hobbies</string>
    <string name="bicicleta">Montar en bicicleta</string>
    <string name="futbol">Jugar fútbol</string>
    <string name="guitarra">Tocar guitarra</string>
    <string name="saltar">Practicar bungee jumping</string>
    <string name="guardar">Registrar</string>
    <string name="lugar">Ciudad de nacimiento</string>
    <string name="fecha_nacimiento">MM/dd/yyyy</string>
    <string name="fecha_nacimiento_lb">Fecha de Nacimiento</string>
    <string name="burguer_app">Burger App</string>
    <string name="todo">TODO</string>
    <string name="hint_contrasena">Mínimo 6 dígitos</string>
    <string name="titulo_login">INICIA SESIÓN A TU CUENTA</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">"Crear cuenta "</string>
    <string name="contrasena_login">Contraseña:</string>
    <string name="titulo_main">Correo electrónico registrado</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>

    <string-array name="ciudades">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Pereira</item>
        <item>Manizales</item>
        <item>Bucaramanga</item>
    </string-array>

</resources>