<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/titulo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />


            <EditText
                android:id="@+id/et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <EditText
                android:id="@+id/et_contrasenax2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:hint="@string/contrasenax2"
                android:inputType="textPassword"
                android:textSize="14sp"
                tools:layout_conversion_absoluteHeight="40dp"
                tools:layout_conversion_absoluteWidth="392dp" />

            <TextView
                android:id="@+id/tv_fecha_nacimiento_lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/fecha_nacimiento_lb"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center"
                    android:text="@string/fecha_nacimiento"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/ibt_calendario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/tomato"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/lugar"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/sp_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/ciudades"
                android:minHeight="40dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sexo"
                    android:layout_width="71dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/aclonica"
                    android:inputType="textPersonName"
                    android:text="@string/sexo"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="TextViewEdits" />

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/femenino" />
            </RadioGroup>

            <TextView
                android:id="@+id/et_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:autofillHints="null"
                android:ems="10"
                android:fontFamily="@font/aclonica"
                android:inputType="textPersonName"
                android:text="@string/hobbies"
                android:textAlignment="viewStart"
                android:textColor="#0C0C0C"
                android:textSize="16sp"
                tools:ignore="TextViewEdits" />

            <CheckBox
                android:id="@+id/cb_hobbie1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/bicicleta" />

            <CheckBox
                android:id="@+id/cb_hobbie2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/futbol" />

            <CheckBox
                android:id="@+id/cb_hobbie3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/guitarra" />

            <CheckBox
                android:id="@+id/cb_hobbie4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/saltar" />

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/tomato"
                android:fontFamily="@font/aclonica"
                android:text="@string/guardar" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
